Post-concert update and 17 -> 20 years

--- a/performances.html
+++ b/performances.html
@@ -64,17 +64,9 @@
             </header>
             <ul>
               <li>
-                <span class="opener">Milking The Moon</span>
-                <ul>
-                  <li><a href="index.html">Concert Information</a></li>
-                  <li><a href="program.html">Program</a></li>
-                  <li><a href="credits.html">Credits</a></li>
-                </ul>
-              </li>
-              <li>
                 <span class="opener">About</span>
                 <ul>
-                  <li><a href="about-gorana.html">Gorana Dance</a></li>
+                  <li><a href="index.html">Gorana Dance</a></li>
                   <li><a href="about-algara.html">Algara Dance</a></li>
                 </ul>
               </li>
@@ -84,6 +76,7 @@
                 <span class="opener">Past Concerts</span>
                 <ul>
                   <li>
+                    <a href="milking-the-moon.html">Milking The Moon</a>
                     <a href="roses-across-the-sea.html">Roses Across The Sea</a>
                     <a href="orenda.html">Orenda: The Collective Power</a>
                   </li>
