--- a/index.html
+++ b/index.html
@@ -24,137 +24,83 @@
             <span><img src="images/logo.jpg" alt="" /></span>
           </header>
 
-          <!-- Banner -->
+          <!-- Content -->
           <section>
-            <div class="row">
-              <div class="col-6 col-12-small">
-                <h1>Milking The Moon: Becoming The Renewal</h1>
-                <p>
-                  <br />
-                  <strong>Milking The Moon: Becoming The Renewal</strong> is an upcoming live
-                  performance of Bulgarian folk dances & songs as part of the 7th GORANA
-                  International Dance festival.
-                </p>
-                <p>
-                  Ancient Bulgarian culture paved the way for the festivals and traditions that are
-                  still alive in Bulgaria today. Life, health, love and joy are represented by
-                  water, wheat, greenery, flowers and more in ritual dancing. In the spring, seeds
-                  are planted in the ground to sustain the renewal of life. Rich in beauty,
-                  cheerfulness, mysteries and fiery dances with beautiful costumes, Bulgarian
-                  folklore must be seen, heard and experienced!
-                </p>
-                <p>
-                  There are many Bulgarian holidays and traditions dedicated to the spring and
-                  summer. A few of them are:
-                </p>
-                <p>
-                  <strong>Lazarovden</strong> is celebrated on the Saturday before Easter. It is the
-                  "coming of age" celebration for young girls known as "lazarki". The maidens are
-                  dressed in colorful costumes with wreaths of flowers in their hair, and sing and
-                  dance with handkerchieves as they go from home to home to cleanse the spaces.
-                </p>
-                <p>
-                  <strong>Tsvetnitsa</strong> is "The Flower's Day". On the Sunday one week before
-                  Easter, Bulgarians bring home twigs from willow trees and use them to decorate
-                  gates, doors and windows as a sign of faith.
-                </p>
-                <p>
-                  <strong>Velikden</strong> is Easter, the main holiday for all Orthodox Christians.
-                  It is connected to the first full moon after the spring solstice day.
-                </p>
-                <p>
-                  <strong>Saint George's Day</strong> is on May 6th. On this day, unmarried young
-                  women are invited onto decorated swings, as it is believed that the swinging will
-                  help them get married. Along with that, everyone with the name Georgi or Gergana
-                  celebrates their name day.
-                </p>
-                <p>
-                  <strong>Nestinarstvo</strong> is an ancient ritual where fire dancers known as
-                  "nestinari" walk and dance on live embers. It originates from Thracian sun worship
-                  asking the Sun God for health, prosperity and fertility in the new year.
-                </p>
-              </div>
+            <header class="main">
+              <h2>About GORANA DANCE</h2>
+            </header>
+            <p>
+              GORANA DANCE is a Bulgarian folk dance collective founded in 2006 by Elissaveta
+              Iordanova. The collective's style is characterized by lively energy, swift steps and
+              exciting interpretation of the traditional Bulgarian folk dance form.
+            </p>
+            <p>
+              Its mission is presenting Bulgarian folk dance art, making connections with
+              communities beyond the Bulgarian one, collaborating with Bulgarian & intercultural
+              folk artists, and serving as a cultural ambassador while being a vital part of the
+              multicultural tapestry of NYC.
+            </p>
+            <p>
+              GORANA DANCE has been presenting annual concerts for 20+ years and performing on
+              different occassions like festivals in the greater NYC, New Jersey, Pennsylvania and
+              Chicago areas.
+            </p>
 
-              <div class="col-6 col-12-small" style="display: flex; align-items: center">
-                <img
-                  src="images/moon.jpg"
-                  style="max-width: 90%; margin-left: auto; margin-right: auto; margin-bottom: 40px"
-                  alt=""
-                />
-                <p>&nbsp;</p>
-              </div>
+            <span class="image main"><img src="images/gorana3.jpg" alt="" /></span>
 
-              <div class="col-12" style="text-align: center">
-                <h3>Date:</h3>
-                <p>Sunday, March 30, 2025 (3:00 PM - 5:00 PM)</p>
-                <h3>Location:</h3>
-                <p>
-                  <a href="https://maps.app.goo.gl/vGETt4R45vvtdtku9">
-                    The Riverside Theatre
-                    <br />
-                    (91 Claremont Avenue, New York, NY, 10027)
-                  </a>
-                </p>
-              </div>
-
-              <div class="col-4 col-12-medium"></div>
-              <div class="col-4 col-12-medium" style="text-align: center">
-                <ul class="actions fit">
-                  <li>
-                    <a
-                      href="https://gorana-international-folk-dance-festival.ticketbud.com/milking-the-moon"
-                      target="_blank"
-                      class="button primary fit"
-                      >Get tickets</a
-                    >
-                  </li>
-                  <li>
-                    <a href="program.html" class="button primary fit">See the program</a>
-                  </li>
-                </ul>
-
-                <p>
-                  <i
-                    >Thank you to the Lower Manhattan Cultural Council Creative Engagement funds,
-                    Tianaderrah Foundation, and private donors for the great support in the past 5
-                    years!</i
-                  >
-                </p>
-              </div>
-              <div class="col-4 col-12-medium"></div>
-            </div>
+            <h2>Members</h2>
+            <p><i>Listed alphabetically by last name:</i></p>
+            <ul>
+              <li>Eleonora Andreeva</li>
+              <li>Cvetelina Atanasova</li>
+              <li>Mariya Dimitrova</li>
+              <li>Chavdar Dobranov</li>
+              <li>Evgeni Dobranov</li>
+              <li>Angelika Glogov</li>
+              <li>Lily Grantcharova</li>
+              <li>Vivian Gueorguieva</li>
+              <li>Jianying Hu</li>
+              <li>Elissaveta Iordanova (Choreographer)</li>
+              <li>Iva Iordanova</li>
+              <li>Assia Mihov</li>
+              <li>Hristo Mihovski</li>
+              <li>Elena Miteva</li>
+              <li>Inna Ognianova-Chorlev</li>
+              <li>Nadia Petkova</li>
+              <li>Venci Petkova</li>
+              <li>Emilia Pironkova</li>
+              <li>Galina Saharova</li>
+              <li>Tsvetina Stoyanova</li>
+              <li>Guergana Stoyantcheva</li>
+              <li>Mihaela Stoyantcheva</li>
+              <li>Ana Vasileva</li>
+              <li>Gannie Tzoneva</li>
+            </ul>
           </section>
 
-          <section>
-            <div class="row">
-              <div class="col-6 col-12-small" style="display: flex; align-items: center">
-                <img
-                  src="images/eli1.jpg"
-                  style="max-width: 80%; margin-left: auto; margin-right: auto; margin-bottom: 40px"
-                  alt=""
-                />
-                <p>&nbsp;</p>
-              </div>
-
-              <div class="col-6 col-12-small">
-                <h2>A note from Elissaveta</h2>
-                <h4><i>Artistic Director, Producer & Choreographer</i></h4>
-
-                <p>
-                  Each performer in <strong>Milking The Moon: Becoming The Renewal</strong> holds a
-                  passion, in his or her own way, for exploring the new meanings and relevance of
-                  traditional practices in our contemporary world thousands of miles away from
-                  Bulgaria.
-                </p>
-                <p>
-                  On a professional level, we look for interdisciplinary links. On a personal level,
-                  we see our engagement in Bulgarian folk art not only as vital sharing of our
-                  artistic expression, but also as a way to connect our roots with our new home in
-                  the US, helping young Bulgarian-Americans born here build a relationship with
-                  their origins.
-                </p>
-              </div>
+          <section id="banner">
+            <div class="content">
+              <header>
+                <h2>Elissaveta Iordanova</h2>
+              </header>
+              <p>
+                Elissaveta is a dance artist and choreographer with professional experience,
+                long-lasting interest & specialty in Bulgarian folk dance, and in-depth knowledge of
+                Bulgarian folkloric heritage.
+              </p>
+              <p>
+                She is the founder, artistic director and choreographer of the GORANA DANCE
+                Collective, uniting several generations of Bulgarian and American dancers around the
+                captivating power of traditional folklore music & dance.
+              </p>
+              <p>
+                Elissaveta is a recipient of LMCC grants and her collective has also been supported
+                by the Tienaderrah Foundation and private donors.
+              </p>
             </div>
+            <span class="image object profile2">
+              <img src="images/eli2.jpg" alt="" />
+            </span>
           </section>
         </div>
       </div>
@@ -169,17 +115,9 @@
             </header>
             <ul>
               <li>
-                <span class="opener">Milking The Moon</span>
-                <ul>
-                  <li><a href="index.html">Concert Information</a></li>
-                  <li><a href="program.html">Program</a></li>
-                  <li><a href="credits.html">Credits</a></li>
-                </ul>
-              </li>
-              <li>
                 <span class="opener">About</span>
                 <ul>
-                  <li><a href="about-gorana.html">Gorana Dance</a></li>
+                  <li><a href="index.html">Gorana Dance</a></li>
                   <li><a href="about-algara.html">Algara Dance</a></li>
                 </ul>
               </li>
@@ -189,6 +127,7 @@
                 <span class="opener">Past Concerts</span>
                 <ul>
                   <li>
+                    <a href="milking-the-moon.html">Milking The Moon</a>
                     <a href="roses-across-the-sea.html">Roses Across The Sea</a>
                     <a href="orenda.html">Orenda: The Collective Power</a>
                   </li>
@@ -222,8 +161,7 @@
           <footer id="footer">
             <p class="copyright">
               Template adapted from
-              <a href="https://html5up.net/editorial" target="_blank">HTML5 Up</a>
-              under the
+              <a href="https://html5up.net/editorial" target="_blank">HTML5 Up</a> under the
               <br />
               <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank"
                 >Creative Commons Attribution 3.0 License</a
