--- a/milking-the-moon.html
+++ b/milking-the-moon.html
@@ -28,56 +28,77 @@
           <section id="banner">
             <div class="content">
               <header>
-                <h1>Program</h1>
+                <h1>Milking The Moon: Becoming The Renewal</h1>
+                <!-- <p>A free and fully responsive site template</p> -->
               </header>
+              <p>
+                <br />
+                <strong>Milking The Moon: Becoming The Renewal</strong> was a live performance of
+                Bulgarian folk dances & songs as part of the 7th GORANA International Dance
+                festival.
+              </p>
+              <p>
+                Ancient Bulgarian culture paved the way for the festivals and traditions that are
+                still alive in Bulgaria today. Life, health, love and joy are represented by water,
+                wheat, greenery, flowers and more in ritual dancing. In the spring, seeds are
+                planted in the ground to sustain the renewal of life. Rich in beauty, cheerfulness,
+                mysteries and fiery dances with beautiful costumes, Bulgarian folklore must be seen,
+                heard and experienced!
+              </p>
+              <p>
+                There are many Bulgarian holidays and traditions dedicated to the spring and summer.
+                A few of them are:
+              </p>
+              <p>
+                <strong>Lazarovden</strong> is celebrated on the Saturday before Easter. It is the
+                "coming of age" celebration for young girls known as "lazarki". The maidens are
+                dressed in colorful costumes with wreaths of flowers in their hair, and sing and
+                dance with handkerchieves as they go from home to home to cleanse the spaces.
+              </p>
+              <p>
+                <strong>Tsvetnitsa</strong> is "The Flower's Day". On the Sunday one week before
+                Easter, Bulgarians bring home twigs from willow trees and use them to decorate
+                gates, doors and windows as a sign of faith.
+              </p>
+              <p>
+                <strong>Velikden</strong> is Easter, the main holiday for all Orthodox Christians.
+                It is connected to the first full moon after the spring solstice day.
+              </p>
+              <p>
+                <strong>Saint George's Day</strong> is on May 6th. On this day, unmarried young
+                women are invited onto decorated swings, as it is believed that the swinging will
+                help them get married. Along with that, everyone with the name Georgi or Gergana
+                celebrates their name day.
+              </p>
+              <p>
+                <strong>Nestinarstvo</strong> is an ancient ritual where fire dancers known as
+                "nestinari" walk and dance on live embers. It originates from Thracian sun worship
+                asking the Sun God for health, prosperity and fertility in the new year.
+              </p>
+              <h3>Date:</h3>
+              <p>Sunday, March 30, 2025 (3:00 PM - 5:00 PM)</p>
+              <h3>Location:</h3>
+              <p>
+                <a href="https://maps.app.goo.gl/vGETt4R45vvtdtku9">
+                  The Riverside Theatre
+                  <br />
+                  (91 Claremont Avenue, New York, NY, 10027)
+                </a>
+              </p>
             </div>
           </section>
 
           <!-- Content -->
-          <section>
-            <header class="main">
-              <h1>About The Ensembles & Artists</h1>
-            </header>
-
-            <header>
-              <h2>GORANA DANCE</h2>
-            </header>
-            <p>
-              Elissaveta Iordanova established ELEA GORANA DANCE COLLECTIVE more than 17 years ago
-              with the mission to preserve Bulgarian folk heritage and to present its beauty through
-              dance, music, rituals and unique costumes. EGDC's goal is to be a cultural ambassador
-              of Bulgaria in the US.
-            </p>
-            <span class="image main">
-              <img
-                src="images/gorana3.jpg"
-                style="max-width: 1000px; margin-left: auto; margin-right: auto"
-                alt=""
-              />
-            </span>
-
-            <header>
-              <h2>Algara Folk Dance Group</h2>
-            </header>
-            <p>
-              Algara Folk Dance Group is a Bulgarian folk dance collective founded in 2018 by Galina
-              Saharova and a group of enthusiastic Bulgarian women living in New Jersey. The group's
-              goal is to present their appreciation of Bulgarian folk traditions to larger
-              audiences.
-            </p>
-            <span class="image main"
-              ><img
-                src="images/algara.jpg"
-                style="max-width: 1000px; margin-left: auto; margin-right: auto"
-                alt=""
-            /></span>
+          <section id="banner">
+            <div class="content">
+              <header class="main">
+                <h1>Line Up</h1>
+              </header>
+            </div>
           </section>
 
           <!-- Section -->
           <section>
-            <header class="main">
-              <h1>Line Up</h1>
-            </header>
             <div class="posts">
               <article>
                 <h3>1. Komitsko Libe – Gorana Dance</h3>
@@ -282,6 +303,199 @@
               </article>
             </div>
           </section>
+
+          <!-- Banner -->
+          <section id="banner">
+            <div class="content">
+              <header>
+                <h1>Credits</h1>
+              </header>
+            </div>
+          </section>
+
+          <!-- Section -->
+          <section>
+            <div class="features">
+              <article>
+                <div class="content">
+                  <h3>GORANA DANCE</h3>
+                  <ul>
+                    <li>Eleonora Andreeva</li>
+                    <li>Cvetelina Atanasova</li>
+                    <li>Mariya Dimitrova</li>
+                    <li>Chavdar Dobranov</li>
+                    <li>Evgeni Dobranov</li>
+                    <li>Angelika Glogov</li>
+                    <li>Lily Grantcharova</li>
+                    <li>Vivian Gueorguieva</li>
+                    <li>Jianying Hu</li>
+                    <li>Elissaveta Iordanova (Choreographer)</li>
+                    <li>Assia Mihov</li>
+                    <li>Elena Miteva</li>
+                    <li>Inna Ognianova-Chorlev</li>
+                    <li>Venci Petkova</li>
+                    <li>Emilia Pironkova</li>
+                    <li>Galina Saharova</li>
+                    <li>Tsvetina Stoyanova</li>
+                    <li>Guergana Stoyantcheva</li>
+                    <li>Mihaela Stoyantcheva</li>
+                    <li>Ana Vasileva</li>
+                    <li>Gannie Tzoneva</li>
+                  </ul>
+                </div>
+              </article>
+              <article>
+                <div class="content">
+                  <h3>Algara Folk Dance Group</h3>
+                  <ul>
+                    <li>Maria Bonevelly</li>
+                    <li>Albena Chernaeva</li>
+                    <li>Vessela Djogova</li>
+                    <li>Virginiya Grigorova</li>
+                    <li>Bisera Iliev</li>
+                    <li>Krasimira Mladenova</li>
+                    <li>Inna Ognianova-Chorlev</li>
+                    <li>Vessela Patchedjieva</li>
+                    <li>Maria Rosenberg</li>
+                    <li>Galina Saharova (Choreographer)</li>
+                    <li>Iskra Simidchieva</li>
+                    <li>Toska Stoianova</li>
+                    <li>Kalina Todorova-Suarez</li>
+                    <li>Tanya Vergieva</li>
+                    <li>Irena Zane</li>
+                  </ul>
+
+                  <h5>&nbsp;</h5>
+
+                  <h3>Drummer</h3>
+                  <ul>
+                    <li>Svetlin Stoyanov</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Costumes & Props</h3>
+                  <ul>
+                    <li>Emilia Pironkova (Large Wreath Design & Production)</li>
+                    <li>Elissaveta Iordanova (Head Decor)</li>
+                    <li>Galina Saharova (Head Decor)</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Artistic Director, Producer & Choreographer</h3>
+                  <ul>
+                    <li>Elissaveta Iordanova</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>House Managers & Ticket Check-In</h3>
+                  <ul>
+                    <li>Margarita Markova</li>
+                    <li>Jenny Garand</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Stage & Technical Assistant</h3>
+                  <ul>
+                    <li>Simona Grantcharova</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Usher</h3>
+                  <ul>
+                    <li>Maya Vassileva</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>AV Director</h3>
+                  <ul>
+                    <li>Coming soon!</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Lights</h3>
+                  <ul>
+                    <li>Coming soon!</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Sound</h3>
+                  <ul>
+                    <li>Coming soon!</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Photography</h3>
+                  <ul>
+                    <li>Coming soon!</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Videographer</h3>
+                  <ul>
+                    <li>Dylan Koa</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Song Editing</h3>
+                  <ul>
+                    <li>Evgeni Dobranov</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Website</h3>
+                  <ul style="margin: 0 0 1em 0">
+                    <li>Evgeni Dobranov<br /></li>
+                  </ul>
+                  <p>
+                    <i style="font-size: 80%">
+                      Template adapted from
+                      <a href="https://html5up.net/editorial" target="_blank">HTML5 Up</a> under the
+                      <br />
+                      <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank"
+                        >Creative Commons Attribution 3.0 License</a
+                      >
+                    </i>
+                  </p>
+                </div>
+              </article>
+            </div>
+          </section>
         </div>
       </div>
 
@@ -295,17 +509,9 @@
             </header>
             <ul>
               <li>
-                <span class="opener">Milking The Moon</span>
-                <ul>
-                  <li><a href="index.html">Concert Information</a></li>
-                  <li><a href="program.html">Program</a></li>
-                  <li><a href="credits.html">Credits</a></li>
-                </ul>
-              </li>
-              <li>
                 <span class="opener">About</span>
                 <ul>
-                  <li><a href="about-gorana.html">Gorana Dance</a></li>
+                  <li><a href="index.html">Gorana Dance</a></li>
                   <li><a href="about-algara.html">Algara Dance</a></li>
                 </ul>
               </li>
@@ -315,6 +521,7 @@
                 <span class="opener">Past Concerts</span>
                 <ul>
                   <li>
+                    <a href="milking-the-moon.html">Milking The Moon</a>
                     <a href="roses-across-the-sea.html">Roses Across The Sea</a>
                     <a href="orenda.html">Orenda: The Collective Power</a>
                   </li>
